613 sed usage missing newline Reviewed by: jason.brian.king@gmail.com Reviewed by: gwr@nexenta.com Reviewed by: garrett@nexenta.com Approved by: garrett@nexenta.com